# aoc23-alpha

./: .editorconfig  .gitignore  .gitmodules  README.md  justfile  load_data.py
day1/: main.asm  run.sh
day10/: Main.j  run.sh
day11/: main.kk  run.sh
day12/: main.lean  run.sh
day13/: main.mojo  run.sh
day14/: main.nim  run.sh
day15/: main.ml  run.sh
day16/: day16  main.pony  run.sh
day17/: main.qi  run.sh
day18/: main.raku  run.sh
day19/: main.swift  run.sh
day2/: main.bqn  run.sh
day20/: main.tcl  run.sh
day23/: Cargo.toml  run.sh
day23/src/: main.rs
day24/: day24.yue  run.sh
day25/: main.zig  run.sh
day3/: main.carp  run.sh
day4/: main.dfy  package-lock.json  package.json  run.sh
day5/: main.erl  run.sh
day6/: .gitignore  flix.toml  run.sh
day6/src/: Main.flix
day7/: gleam.toml  manifest.toml  run.sh
day7/src/: day7.gleam
day8/: day8.cabal  run.sh
day8/app/: Main.hs
day9/: main.io  run.sh
