cabal-version:      3.0
name:               day8
version:            0.1.0.0
author:             Eric Zhang
maintainer:         ekzhang1@gmail.com
build-type:         Simple

common warnings
  ghc-options: -Wall -fllvm -O3

executable day8
  import:           warnings
  main-is:          Main.hs
  build-depends:
    base ^>=4.14.3.0,
    containers ^>=0.6.5.1,
    parsec ^>=3.1.17.0
  hs-source-dirs:   app
  default-language: Haskell2010
